src/App.css
html {
  position: relative;
  text-align: center;
  font-family: 'Roboto', sans-serif;
}

html:after {
   content : "";
   display: block;
   position: absolute;
   top: 0;
   left: 0;
   background-image: url("./backgrounds/PandaEating.jpg"); 
   width: 100%;
   min-height: 100%;
   height: 100%;
   opacity : 0.15;
   z-index: -1;
   background-size: cover;                     
   background-repeat: no-repeat;
   background-position: center center; 
   background-attachment: fixed;
}

.App {
  width: 100%;
  height: 100%;
}

.header {
  background-color: #3dd28d;
  height: 40px;
  color: white;
}

.header-products, .header-orders {
  padding: 11.4px 15px;
  line-height: 40px;
}

.header-products:hover, .header-orders:hover { 
  background-color: #30a16c;
}

.button {
  background: #3dd28d;
  color: #FFFFFF;
  margin: 10px;
  border: 0 none;
  border-radius: 4px;
  box-shadow: 2px 2px 1.5px #888888;
}
  
.button:hover {
  transition: all 60ms ease;
  opacity: .85;
}
  
.button:active {
  transition: all 60ms ease;
  opacity: .75;
}

select {
  border: 0;
  color: #FFFFFF;
  padding: 2px 10px;
  width: 50px;
  background: #3dd28d;
  box-shadow: 2px 2px 1.5px #888888;
}

.add-product-select {
  width: 200px;
  margin: 7.5px;
}

.product {
  display: inline-block;
  margin: 5% auto;
}

.product-image {
  height: 300px;
  width: 200px;
  -webkit-border-radius: 20px;
	-moz-border-radius: 20px;
  border-radius: 20px;
  box-shadow: 3px 3px 2.5px #888888;
}

.product-image-order {
  height: 150px;
  width: 100px;
  -webkit-border-radius: 20px;
	-moz-border-radius: 20px;
  border-radius: 20px;
  box-shadow: 2px 2px 1.5px #888888;
}

.product-name {
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: bold;
  font-size: 20px;
  width: 200px;
  margin: 0 auto;
}

.product-description {
  max-width: 75%;
  width: 250px;
  margin: 0 auto;
}

.instructions {
  max-width: 85%;
  margin: 0 auto;
  padding-top: 10px;
}

